Created my branch

--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -1,7 +1,7 @@
 <!--sidebar-->
 <c-sidebar #sidebar="cSidebar" class="d-print-none sidebar sidebar-fixed" id="sidebar" visible>
   <c-sidebar-brand [brandFull]="{
-      src: 'assets/img/brand/logo.png',
+      src: 'assets/icons/logo.png',
       width: 125,
       height: 40,
       alt: 'CoreUI Logo'
