--- a/src/app/views/admin/admin-add/admin-add.component.html
+++ b/src/app/views/admin/admin-add/admin-add.component.html
@@ -70,7 +70,7 @@
 
                     <div class="checkboxes">
                         <c-form-check md="12">
-                            <input cFormCheckInput type="checkbox" id="role" formControlName="role">
+                            <input cFormCheckInput type="checkbox" id="role" formControlName="role" value="Super-Admin">
                             <label cFormCheckLabel cLabel for="role">I accept all the terms and
                                 conditions
                                 required to be an admin</label>
