--- a/src/app/views/product/product-list/product-list.component.html
+++ b/src/app/views/product/product-list/product-list.component.html
@@ -16,7 +16,7 @@
                     <button cButton color="success" class="update">
                         Update
                     </button>
-                    <button cButton color="danger" class="delete">
+                    <button cButton color="danger" class="delete" (click)="confirmBox(product._id)">
                         Delete
                     </button>
                 </mat-card-actions>
