--- a/src/app/views/product/product-add/product-add.component.html
+++ b/src/app/views/product/product-add/product-add.component.html
@@ -3,6 +3,7 @@
         <c-card>
             <c-card-body>
                 <form cForm class="row g-3" [formGroup]="productAddForm" (ngSubmit)="addProduct()">
+                    <h1>Add Product</h1>
                     <c-col md="12">
                         <label cLabel for="productName">Product Name</label>
                         <input formControlName="productName" cFormControl id="productName" type="text"
