--- a/src/app/views/user/user-add/user-add.component.html
+++ b/src/app/views/user/user-add/user-add.component.html
@@ -3,6 +3,7 @@
         <c-card>
             <c-card-body>
                 <form cForm class="row g-3" [formGroup]="userAddForm" (ngSubmit)="addUser()">
+                    <h1>Add User</h1>
                     <c-col md="6">
                         <label cLabel for="email">Email</label>
                         <input type="email" formControlName="email" cFormControl id="email"
