--- a/src/app/views/user/user-add/user-add.component.scss
+++ b/src/app/views/user/user-add/user-add.component.scss
@@ -1,12 +1,32 @@
-button {
-  margin-top: 8px;
-}
+form {
+  margin-top: 1px;
 
-.res-container {
-  width: 100%;
+  @media only screen and (max-width: 768px) {
+    margin-bottom: 16px;
+  }
 
-  .res-text {
-    color: #f44336;
-    margin-bottom: 0;
+  h1 {
+    margin-bottom: 8px;
+
+    @media only screen and (max-width: 768px) {
+      text-align: center;
+    }
+  }
+
+  button {
+    margin-top: 8px;
+
+    @media only screen and (max-width: 768px) {
+      width: 100%;
+    }
+  }
+
+  .res-container {
+    width: 100%;
+
+    .res-text {
+      color: #f44336;
+      margin-bottom: 0;
+    }
   }
 }
