--- a/src/app/views/admin/admin-add/admin-add.component.html
+++ b/src/app/views/admin/admin-add/admin-add.component.html
@@ -4,10 +4,22 @@
             <c-card-body>
                 <form cForm class="row g-3" [formGroup]="adminAddForm" (ngSubmit)="addAdmin()">
                     <h1>Add Admin</h1>
+                    <c-col md=" 6">
+                        <label cLabel for="name">Full Name</label>
+                        <input formControlName="name" cFormControl id="name" type="text"
+                            placeholder="Enter Full Name" />
+                        <div
+                            *ngIf="adminAddForm.controls['name']?.dirty || adminAddForm.controls['name']?.touched && adminAddForm.controls['name'].invalid">
+                            <mat-error *ngIf="adminAddForm.controls['name']?.hasError('required')">Name is
+                                required</mat-error>
+                            <mat-error *ngIf="adminAddForm.controls['name']?.hasError('minlength')">Name must have
+                                atleast 3 characters</mat-error>
+                        </div>
+                    </c-col>
+
                     <c-col md="6">
                         <label cLabel for="email">Email</label>
-                        <input type="email" formControlName="email" cFormControl id="email"
-                            placeholder="Enter Email..." />
+                        <input type="email" formControlName="email" cFormControl id="email" placeholder="Enter Email" />
                         <div
                             *ngIf="adminAddForm.controls['email']?.dirty || adminAddForm.controls['email']?.touched && adminAddForm.controls['email'].invalid">
                             <mat-error *ngIf="adminAddForm.controls['email']?.hasError('email')">Please enter a valid
@@ -16,22 +28,9 @@
                     </c-col>
 
                     <c-col md="6">
-                        <label cLabel for="username">Username</label>
-                        <input formControlName="username" cFormControl id="username" type="text"
-                            placeholder="Enter username..." />
-                        <div
-                            *ngIf="(adminAddForm.controls['username']?.dirty || adminAddForm.controls['username']?.touched) && adminAddForm.controls['username'].invalid">
-                            <mat-error *ngIf="adminAddForm.controls['username']?.hasError('required')">Username is
-                                required</mat-error>
-                            <mat-error *ngIf="adminAddForm.controls['username']?.hasError('minlength')">Username must
-                                have atleast 3 characters</mat-error>
-                        </div>
-                    </c-col>
-
-                    <c-col md="6">
                         <label cLabel for="password">Password</label>
                         <input formControlName="password" cFormControl id="password" type="password"
-                            placeholder="Enter password..." />
+                            placeholder="Enter password" />
                         <div
                             *ngIf="adminAddForm.controls['password']?.dirty || adminAddForm.controls['password']?.touched && adminAddForm.controls['password'].invalid">
                             <mat-error *ngIf="adminAddForm.controls['password']?.hasError('required')">Password is
@@ -43,22 +42,23 @@
                         </div>
                     </c-col>
 
-                    <c-col md=" 6">
-                        <label cLabel for="name">Name</label>
-                        <input formControlName="name" cFormControl id="name" type="text" placeholder="Enter name..." />
+                    <c-col md="6">
+                        <label cLabel for="username">Username</label>
+                        <input formControlName="username" cFormControl id="username" type="text"
+                            placeholder="Enter username" />
                         <div
-                            *ngIf="adminAddForm.controls['name']?.dirty || adminAddForm.controls['name']?.touched && adminAddForm.controls['name'].invalid">
-                            <mat-error *ngIf="adminAddForm.controls['name']?.hasError('required')">Name is
+                            *ngIf="(adminAddForm.controls['username']?.dirty || adminAddForm.controls['username']?.touched) && adminAddForm.controls['username'].invalid">
+                            <mat-error *ngIf="adminAddForm.controls['username']?.hasError('required')">Username is
                                 required</mat-error>
-                            <mat-error *ngIf="adminAddForm.controls['name']?.hasError('minlength')">Name must have
-                                atleast 3 characters</mat-error>
+                            <mat-error *ngIf="adminAddForm.controls['username']?.hasError('minlength')">Username must
+                                have atleast 3 characters</mat-error>
                         </div>
                     </c-col>
 
                     <c-col md="6">
                         <label cLabel for="phoneNo">Mobile Number</label>
                         <input formControlName="phoneNo" cFormControl id="phoneNo" type="text"
-                            placeholder="Enter Mobile Number..." numbersOnly />
+                            placeholder="Enter Mobile Number" numbersOnly />
                         <div
                             *ngIf="adminAddForm.controls['phoneNo']?.dirty || adminAddForm.controls['phoneNo']?.touched && adminAddForm.controls['phoneNo'].invalid">
                             <mat-error *ngIf="adminAddForm.controls['phoneNo']?.hasError('required')">Mobile number is
@@ -69,22 +69,26 @@
                         </div>
                     </c-col>
 
-                    <div class="checkboxes">
-                        <c-form-check md="12">
-                            <input cFormCheckInput type="checkbox" id="role" formControlName="role" value="Super-Admin">
-                            <label cFormCheckLabel cLabel for="role">I accept all the terms and
-                                conditions
-                                required to be an admin</label>
-                        </c-form-check>
+                    <c-col md="6">
+                        <label cLabel for="gender">Role</label>
+                        <select cSelect formControlName="role" placeholder="Enter Role">
+                            <option value="Super-Admin">Super Admin</option>
+                        </select>
+                        <div
+                            *ngIf="adminAddForm.controls['role']?.dirty || (adminAddForm.controls['role']?.touched && adminAddForm.controls['role'].invalid)">
+                            <mat-error *ngIf="adminAddForm.controls['role']?.hasError('required')">Role is
+                                required</mat-error>
+                        </div>
+                    </c-col>
 
-
-                        <c-form-check md="12">
+                    <c-col md="12">
+                        <c-form-check>
                             <input cFormCheckInput type="checkbox" id="hasAccess" formControlName="hasAccess">
                             <label cFormCheckLabel for="hasAccess">I accept all the terms and
                                 conditions
-                                required to perform all admin actions</label>
+                                required to perform admin actions</label>
                         </c-form-check>
-                    </div>
+                    </c-col>
 
                     <div class="res-container" *ngIf="errorMessage">
                         <p class="res-text">{{errorMessage}}</p>
