--- a/src/app/views/user/user-edit/user-edit.component.html
+++ b/src/app/views/user/user-edit/user-edit.component.html
@@ -2,6 +2,7 @@
 <button (click)="closeDialog()"><span>&times;</span></button>
 <mat-dialog-content [formGroup]="editUserForm">
     <mat-form-field>
+        <mat-label cLabel for="fullName">Full Name</mat-label>
         <input matInput formControlName="fullName" placeholder="Enter Full Name" />
     </mat-form-field>
     <div
@@ -13,6 +14,7 @@
     </div>
 
     <mat-form-field>
+        <mat-label cLabel for="address">Address</mat-label>
         <input matInput formControlName="address" placeholder="Enter Address" />
     </mat-form-field>
     <div
@@ -24,6 +26,7 @@
     </div>
 
     <mat-form-field>
+        <mat-label cLabel for="phoneNo">Mobile</mat-label>
         <input matInput formControlName="phoneNo" placeholder="Enter Phone Number" />
     </mat-form-field>
     <div
@@ -36,6 +39,7 @@
     </div>
 
     <mat-form-field>
+        <mat-label cLabel for="email">Email</mat-label>
         <input matInput formControlName="email" placeholder="Enter Email" />
     </mat-form-field>
     <div
@@ -45,7 +49,13 @@
     </div>
 
     <mat-form-field>
-        <input matInput formControlName="gender" placeholder="Enter Gender" />
+        <mat-label cLabel for="gender">Gender</mat-label>
+        <mat-select cSelect formControlName="gender" placeholder="Enter Gender">
+            <!-- <option selected>Select your gender</option> -->
+            <mat-option value="Male">Male</mat-option>
+            <mat-option value="Female">Female</mat-option>
+            <mat-option value="Others">Others</mat-option>
+        </mat-select>
     </mat-form-field>
     <div
         *ngIf="editUserForm.controls['gender']?.dirty || (editUserForm.controls['gender']?.touched && editUserForm.controls['gender'].invalid)">
@@ -53,12 +63,11 @@
             required</mat-error>
     </div>
 
-</mat-dialog-content>
-<mat-dialog-actions>
-    <button cButton [disabled]="editUserForm.invalid" (click)="editUser(data.user._id)">
-        Save
-    </button>
-    <button cButton (click)="closeDialog()">
-        Cancel
-    </button>
-</mat-dialog-actions>
+    <mat-dialog-actions>
+        <button cButton [disabled]="editUserForm.invalid" (click)="editUser(data.user._id)">
+            Save
+        </button>
+        <button cButton (click)="closeDialog()">
+            Cancel
+        </button>
+    </mat-dialog-actions>
