Fixed admin register issue

--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -107,7 +107,7 @@
                             </div>
 
                             <div class="d-grid">
-                                <button cButton color="success" [disabled]="adminAddForm.invalid">Create
+                                <button cButton color="success" type="submit" [disabled]="adminAddForm.invalid">Create
                                     Account</button>
                             </div>
                         </form>
