--- a/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/src/app/containers/default-layout/default-header/default-header.component.html
@@ -31,11 +31,19 @@
     </button>
     <ul cDropdownMenu class="pt-0 pr-5 w-auto">
       <li>
-        <h6 cDropdownHeader class="bg-light fw-semibold py-2">Account</h6>
+        <h6 cDropdownHeader class="bg-light fw-semibold py-2">Settings</h6>
       </li>
       <li>
-        <a routerLink="./" cDropdownItem (click)="logout()">
-          Logout
+        <a [routerLink]="['/admin/adminProfile']" cDropdownItem>
+          <svg cIcon class="me-2" name="cilUser"></svg>Profile
+        </a>
+      </li>
+      <li>
+        <hr cDropdownDivider />
+      </li>
+      <li>
+        <a routerLink="" cDropdownItem (click)="logout()">
+          <svg cIcon class="me-2" name="cilLockLocked"></svg>Logout
         </a>
       </li>
     </ul>
