material dialog style edit

--- a/src/app/views/admin/admin-edit/admin-edit.component.scss
+++ b/src/app/views/admin/admin-edit/admin-edit.component.scss
@@ -1,4 +1,26 @@
-mat-dialog-content {
+.heading-close-box {
+  padding: 0 10px;
+  // border: 1px solid red;
+  
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+
+  button {
+      width: 30px;
+      height: 30px;
+      // border: 1px solid blue;
+  }
+
+
+}
+
+
+
+mat-form-field {
+  margin: 0 3px;
+}
+
+mat-dialog-actions button {
+  margin: 0 3px;
 }
