--- a/src/app/views/admin/admin-edit/admin-edit.component.scss
+++ b/src/app/views/admin/admin-edit/admin-edit.component.scss
@@ -7,10 +7,18 @@
   align-items: center;
 
   button {
-      width: 30px;
-      height: 30px;
-      // border: 1px solid blue;
-  }
+    width: 30px;
+    height: 30px;
+    border: none;
+    outline:none;
+    border-radius: 5px;
+    
+    &:hover {
+        background-color: blue;
+        color: white;
+        border-radius: 15px;
+    }
+}
 
 
 }
